--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Handjet:wght@100;200;300;400;500&display=swap");
+
 .App {
   text-align: center;
 }
